--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 @font-face {
   font-family: font1;
-  src: url(Comfortaa-VariableFont_wght.ttf);
+  src: url(Font/Comfortaa-VariableFont_wght.ttf);
 }
 
 html,
@@ -44,7 +44,7 @@ main {
 .weather-container {
   width: 100%;
   height: 100%;
-  background: url(sunny.png);
+  background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
