--- a/style.css
+++ b/style.css
@@ -41,6 +41,61 @@ main {
   width: 100%;
   height: 100vh;
 }
+
+.error-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  cursor: default;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  opacity: 0;
+  z-index: -11;
+  transform: scale(0);
+}
+
+.error {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  height: 300px;
+  backdrop-filter: blur(20px);
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px#fff;
+  color: red;
+  font-size: 20px;
+  text-align: center;
+  line-height: 33px;
+  padding: 0 10px;
+}
+
+.error-close {
+  backdrop-filter: blur(20px);
+  border-radius: 20px;
+  padding: 10px 20px;
+  color: white;
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  border: 1px solid white;
+}
+
+.error-close:hover {
+  background-color: white;
+  color: black;
+}
+
 .weather-container {
   width: 100%;
   height: 100%;
@@ -153,22 +208,14 @@ main {
   cursor: pointer;
 }
 
-.error {
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  top: 14%;
-  color: red;
-  font-weight: 500;
-}
-
 .weather-more-information {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  padding: 10px 10px;
+  gap: 10px;
 }
 .weather-condition-long-info {
   background-color: black;
@@ -177,16 +224,6 @@ main {
   border-radius: 20px;
   font-size: 18px;
   font-weight: 300;
-}
-
-.more-weather-info-spans {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px 10px;
-  gap: 10px;
 }
 
 .more-weather-info-span {
@@ -220,4 +257,132 @@ main {
 .feel-like-icon,
 .temp-max-icon {
   color: red;
+}
+@media (max-width: 750px) {
+  .weather-column:nth-child(1) {
+    width: 100%;
+    height: 50%;
+  }
+
+  .temp {
+    font-size: 60px;
+    mix-blend-mode: difference;
+  }
+
+  .name {
+    font-size: 40px;
+  }
+  .date {
+    font-size: 18px;
+  }
+
+  .weather-column:nth-child(2) {
+    width: 100%;
+    height: 50%;
+  }
+
+  .weather-more-information {
+    justify-content: flex-start;
+    height: 500px;
+    overflow-y: scroll;
+    margin-top: 10px;
+  }
+
+  .search {
+    font-size: 16px;
+  }
+
+  .search::placeholder {
+    font-size: 14px;
+  }
+
+  .search-btn {
+    font-size: 18px;
+  }
+  .weather-condition-short-info,
+  .weather-condition-long-info {
+    font-size: 15px;
+  }
+
+  .more-weather-info-span > h5,
+  .temp-max-value {
+    font-size: 15px;
+  }
+  .more-weather-info-span > div > i {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 550px) {
+  .error-container {
+    padding: 0 10px;
+  }
+
+  .error {
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .error-close {
+    padding: 8px 18px;
+    font-size: 18px;
+  }
+
+  .error-close:hover {
+    background-color: white;
+    color: black;
+  }
+
+  .weather-column:nth-child(1) {
+    width: 100%;
+    height: 50%;
+  }
+
+  .temp {
+    font-size: 40px;
+    mix-blend-mode: difference;
+  }
+
+  .name {
+    font-size: 30px;
+  }
+  .date {
+    font-size: 16px;
+  }
+
+  .weather-column:nth-child(2) {
+    width: 100%;
+    height: 50%;
+  }
+
+  .weather-more-information {
+    justify-content: flex-start;
+    height: 500px;
+    overflow-y: scroll;
+    margin-top: 10px;
+  }
+
+  .search {
+    font-size: 16px;
+  }
+
+  .search::placeholder {
+    font-size: 13px;
+  }
+
+  .search-btn {
+    font-size: 15px;
+  }
+  .weather-condition-short-info,
+  .weather-condition-long-info {
+    font-size: 15px;
+  }
+
+  .more-weather-info-span > h5,
+  .temp-max-value {
+    font-size: 15px;
+  }
+  .more-weather-info-span > div > i {
+    font-size: 17px;
+  }
 }
