--- a/style.css
+++ b/style.css
@@ -19,14 +19,14 @@ body {
 
 ::-webkit-scrollbar {
   width: 8px;
-  border-radius: 10px;
+  border-radius: 5px;
 
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: royalblue;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 body {
@@ -285,18 +285,8 @@ main {
   .weather-column:nth-child(2) {
     width: 100%;
     height: 50%;
-  }
-
-  .weather-more-information {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 500px;
     overflow-y: scroll;
-    margin-top: 10px;
-  }
-  .more-weather-info-span {
-    width: 100%;
+    padding: 10px 15px;
   }
 
   .search {
@@ -326,12 +316,10 @@ main {
 
 @media (max-width: 550px) {
   .weather-column:nth-child(1) {
-    width: 100%;
     height: 40%;
   }
 
   .weather-column:nth-child(2) {
-    width: 100%;
     height: 60%;
   }
   .error-container {
