--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ html,
 body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   font-family: font1;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
