--- a/style.css
+++ b/style.css
@@ -13,10 +13,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: font1;
-  overflow-x: hidden;
 }
-
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -26,6 +23,9 @@ body {
 }
 
 body {
+  font-family: font1;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
   cursor: pointer;
   user-select: none;
   -moz-user-select: none;
@@ -43,7 +43,8 @@ body {
 }
 main {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  position: relative;
 }
 
 .error-container {
@@ -54,7 +55,7 @@ main {
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(5px);
   cursor: default;
   display: flex;
