--- a/style.css
+++ b/style.css
@@ -51,12 +51,11 @@ main {
   background-color: rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(5px);
   cursor: default;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  opacity: 0;
-  z-index: -11;
+  z-index: 99999;
 }
 
 .error {
