--- a/style.css
+++ b/style.css
@@ -110,11 +110,12 @@ main {
   width: 60%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 20px;
   align-items: center;
   text-align: center;
   color: #fff9e3;
-  padding: 0px 20px;
+  padding: 10px 20px;
 }
 
 .temp {
@@ -263,6 +264,16 @@ main {
   .weather-column:nth-child(2) {
     width: 50%;
   }
+  .temp {
+    font-size: 50px;
+  }
+
+  .name {
+    font-size: 40px;
+  }
+  .date {
+    font-size: 18px;
+  }
 }
 
 @media (max-width: 850px) {
@@ -276,14 +287,14 @@ main {
   }
 
   .temp {
-    font-size: 60px;
+    font-size: 40px;
   }
 
   .name {
-    font-size: 40px;
+    font-size: 30px;
   }
   .date {
-    font-size: 18px;
+    font-size: 15px;
   }
 
   .search {
@@ -327,14 +338,14 @@ main {
   }
 
   .temp {
-    font-size: 40px;
+    font-size: 30px;
   }
 
   .name {
-    font-size: 30px;
+    font-size: 20px;
   }
   .date {
-    font-size: 16px;
+    font-size: 12px;
   }
 
   .search::placeholder {
